Ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: alpaca.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alpaca
              port:
                number: 8080
