Ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - hosts:
    - alpaca.example.com
    secretName: tls-secret-name
  rules:
    - host: alpaca.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alpaca
              port:
                number: 8080
